feat: Refactored frontend to communicate with backend

--- a/services/frontend/src/index.html
+++ b/services/frontend/src/index.html
@@ -19,8 +19,8 @@
         <option value="chicken" id="toOunces">Chicken</option>
         <option value="rice" id="toKilogram">Rice</option>
         <option value="black-beans" id="toGram">Black Beans</option>
-        <option value="salmon" id="toGram">Salmon</option>
-        <option value="avocado" id="toGram">Avocado</option>
+        <option value="cheese" id="toGram">Cheese</option>
+        <option value="brocoli" id="toGram">Brocoli</option>
       </select>
     </div>
 
