fix: typos and cases chore: added more food choices to the front end

--- a/services/frontend/src/index.html
+++ b/services/frontend/src/index.html
@@ -16,11 +16,22 @@
     <div class="input-container">
       <label style="font-size: 1.2rem">Select Food:</label>
       <select name="foodSelector" class="custom-select" id="foodSelector">
-        <option value="chicken" id="toOunces">Chicken</option>
-        <option value="rice" id="toKilogram">Rice</option>
-        <option value="black-beans" id="toGram">Black Beans</option>
-        <option value="cheese" id="toGram">Cheese</option>
-        <option value="brocoli" id="toGram">Brocoli</option>
+        <option value="rice">Rice</option>
+        <option value="pasta">Pasta</option>
+        <option value="quinoa">Quinoa</option>
+        <option value="broccoli">Broccoli</option>
+        <option value="spinach">Spinach</option>
+        <option value="cauliflower">Cauliflower</option>
+        <option value="yogurt">Yogurt</option>
+        <option value="milk">Milk</option>
+        <option value="cheese">Cheese</option>
+        <option value="beef">Beef</option>
+        <option value="salmon">Salmon</option>
+        <option value="chicken">Chicken</option>
+        <option value="black-beans">Black Beans</option>
+        <option value="potato">Potato</option>
+        <option value="butter">Butter</option>
+        <option value="pork">Pork</option>
       </select>
     </div>
 
