--- a/services/frontend/src/index.html
+++ b/services/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CodePen - Weight Converter</title>
+    <title>Weight Converter</title>
     <link
       href="https://fonts.googleapis.com/css?family=Text+Me+One"
       rel="stylesheet"
